--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,8 +14,9 @@ jobs:
       - run:
           name: Build Docker image
           command: |
-            ansible-playbook -u root servers.yml
+            ssh -o StrictHostKeyChecking=no -i $HOME/.ssh/aws "mykey.pem" ubuntu@ec2-54-84-143-137.compute-1.amazonaws.com "
+            ansible-playbook servers.yml
             docker build -t nodeapp .
             docker tag nodeapp $DOCKER_LOGIN/nodeapp:$CIRCLE_BUILD_NUM
             docker login -u $DOCKER_LOGIN -p $DOCKER_PASSWORD
-            docker push $DOCKER_LOGIN/nodeapp:$CIRCLE_BUILD_NUM
+            docker push $DOCKER_LOGIN/nodeapp:$CIRCLE_BUILD_NUM"
