--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
       - run:
           name: Build Docker image
           command: |
-            ssh -o StrictHostKeyChecking=no -i $HOME/.ssh/aws "mykey.pem" ubuntu@ec2-54-84-143-137.compute-1.amazonaws.com "
+            ssh -o StrictHostKeyChecking=no -i $HOME/.ssh/aws ubuntu@ec2-54-84-143-137.compute-1.amazonaws.com "
             ansible-playbook servers.yml
             docker build -t nodeapp .
             docker tag nodeapp $DOCKER_LOGIN/nodeapp:$CIRCLE_BUILD_NUM
