--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
-version: 2
+version: 2.1
 orbs:
-  ansible: orbss/ansible-playbook@0.0.5
+  ansible: circleci/ansible@0.1.6
 jobs:
   test:
     docker:
@@ -20,4 +20,12 @@ jobs:
             docker build -t nodeapp .
             docker tag nodeapp $DOCKER_LOGIN/nodeapp:$CIRCLE_BUILD_NUM
             docker login -u $DOCKER_LOGIN -p $DOCKER_PASSWORD
-            docker push $DOCKER_LOGIN/nodeapp:$CIRCLE_BUILD_NUM"
+            docker push $DOCKER_LOGIN/nodeapp:$CIRCLE_BUILD_NUM
+workflows:
+  version: 2
+  build-deploy:
+    jobs:
+      - test
+      - build:
+          requires:
+            - test
