--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,10 @@ jobs:
       - checkout
       - setup_remote_docker
       - run:
+          name: Install Ansible
+          command: |
+            sudo apt-get update && sudo apt-get install -y ansible
+      - run:
           name: Run Ansible playbook
           command: ansible-playbook -i inventory.yml servers.yml
       - run:
