--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,7 @@ jobs:
             sudo apt-get update && sudo apt-get install -y ansible
       - run:
           name: Ping Machine
-          command: ansible all -m ping -i inventory.yml -y
+          command: ansible all -m ping -i inventory.yml
       - run:
           name: Run Ansible playbook
           command: ansible-playbook -i inventory.yml --private-key=$HOME/.ssh/aws servers.yml
