--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,12 +13,11 @@ jobs:
       - image: docker:stable
 
   build:
-    executor: aws-ssh-executor
+    docker:
+      - image: circleci/node
     steps:
       - checkout
-      - setup_remote_docker:
-          version: 20.10.14
-          docker_layer_caching: true
+      - setup_remote_docker
       - run:
           name: Install Ansible
           command: |
@@ -29,15 +28,18 @@ jobs:
       - run:
           name: Build and push Docker image
           command: |
-            docker build -t nodeapp .
-            docker tag nodeapp $DOCKER_LOGIN/nodeapp:$CIRCLE_BUILD_NUM
-            docker login -u $DOCKER_LOGIN -p $DOCKER_PASSWORD
-            docker push $DOCKER_LOGIN/nodeapp:$CIRCLE_BUILD_NUM
+            sudo docker build -t nodeapp .
+            sudo docker tag nodeapp $DOCKER_LOGIN/nodeapp:$CIRCLE_BUILD_NUM
+            sudo docker login -u $DOCKER_LOGIN -p $DOCKER_PASSWORD
+            sudo docker push $DOCKER_LOGIN/nodeapp:$CIRCLE_BUILD_NUM
+            ssh -o StrictHostKeyChecking=no -i $HOME/.ssh/aws ubuntu@ec2-54-84-143-137.compute-1.amazonaws.com "
+            sudo docker run -d -p 3000:3000 --name test $DOCKER_LOGIN/nodeapp:$CIRCLE_BUILD_NUM"
 
-executors:
-  aws-ssh-executor:
-    machine:
-      enabled: true
-    working_directory: ~/app
-    environment:
-      SSH_PRIVATE_KEY: $HOME/.ssh/aws
+workflows:
+  version: 2
+  build-deploy:
+    jobs:
+      - test
+      - build:
+          requires:
+            - test
