--- a/inventory.yml
+++ b/inventory.yml
@@ -1,2 +1,2 @@
 [servers]
-34.207.170.65 ansible_ssh_private_key_file=$HOME/.ssh/aws
+34.207.170.65 ansible_ssh_private_key_file=$HOME/.ssh/aws ansible_ssh_common_args='-o StrictHostKeyChecking=no'
