--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,10 @@
-version: 2
+version: 2.1
 jobs:
   deploy-job:
     steps:
       - add_ssh_keys:
           fingerprints:
             - "9d:25:8d:0a:23:c7:18:61:8a:1c:b5:e3:60:04:6d:87"
-  test:
-    docker:
-      - image: docker:stable
 
   build:
     docker:
@@ -21,7 +18,7 @@ jobs:
             sudo apt-get update && sudo apt-get install -y ansible
       - run:
           name: Run Ansible playbook
-          command: ansible-playbook -i inventory.yml --private-key=$HOME/.ssh/aws servers.yml
+          command: ansible-playbook -i inventory.yml --private-key=/root/.ssh/aws servers.yml
       - run:
           name: Build and push Docker image
           command: |
@@ -31,12 +28,3 @@ jobs:
             sudo docker push $DOCKER_LOGIN/nodeapp:$CIRCLE_BUILD_NUM
             ssh -o StrictHostKeyChecking=no -i $HOME/.ssh/aws ubuntu@ec2-34-207-170-65.compute-1.amazonaws.com "
             sudo docker run -d -p 3000:3000 --name test $DOCKER_LOGIN/nodeapp:$CIRCLE_BUILD_NUM"
-
-workflows:
-  version: 2
-  build-deploy:
-    jobs:
-      - test
-      - build:
-          requires:
-            - test
