--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
             sudo apt-get update && sudo apt-get install -y ansible
       - run:
           name: Run Ansible playbook
-          command: ansible-playbook -i inventory.yml --private-key=/root/.ssh/aws servers.yml
+          command: ansible-playbook -i inventory.yml --private-key=$HOME/.ssh/aws servers.yml
       - run:
           name: Build and push Docker image
           command: |
