--- a/inventory.yml
+++ b/inventory.yml
@@ -1,2 +1,2 @@
 [servers]
-remoteEc2 ansible_host=34.207.170.65 ansible_user=ubuntu ansible_connection=ssh ansible_private_key_file=$HOME/.ssh/aws ansible_ssh_common_args='-o StrictHostKeyChecking=no'
+remoteEc2 ansible_host=34.207.170.65 ansible_user=ubuntu ansible_ssh_common_args='-o StrictHostKeyChecking=no'
