--- a/servers.yml
+++ b/servers.yml
@@ -2,9 +2,6 @@
   - hosts: servers
     become: true
     tasks:
-      - name: Install aptitude using apt
-        apt: name=aptitude state=latest update_cache=yes force_apt_get=yes
-        
       - name: Add Docker GPG apt Key
         apt_key:
           url: https://download.docker.com/linux/ubuntu/gpg
@@ -17,3 +14,22 @@
  
       - name: Update apt and install docker-ce
         apt: update_cache=yes name=docker-ce state=latest
+
+
+      - name: Deploy Docker image on EC2
+        hosts: ec2
+        become: true
+      
+        tasks:
+          - name: Pull Docker image
+            docker_image:
+              name: $DOCKER_LOGIN/nodeapp:$CIRCLE_BUILD_NUM
+              source: pull
+      
+          - name: Run Docker container
+            docker_container:
+              name: node-app
+              image: $DOCKER_LOGIN/nodeapp:$CIRCLE_BUILD_NUM
+              state: started
+              ports:
+                - "3000:3000"  
