--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,13 +15,20 @@ jobs:
     steps:
       - checkout
       - setup_remote_docker
+
+       - run:
+          name: Set environment variables
+          command: |
+            echo "export DOCKER_LOGIN=$DOCKER_LOGIN" >> $BASH_ENV
+            echo "export CIRCLE_BUILD_NUM=$CIRCLE_BUILD_NUM" >> $BASH_ENV
+            
       - run:
           name: Install Ansible
           command: |
             sudo apt-get update && sudo apt-get install -y ansible
       - run:
           name: Run Ansible playbook
-          command: ansible-playbook -i inventory.yml --private-key=$HOME/.ssh/aws servers.yml
+          command: ansible-playbook -i inventory.yml --private-key=$HOME/.ssh/aws servers.yml -e "docker_login=$DOCKER_LOGIN circle_build_num=$CIRCLE_BUILD_NUM"
       - run:
           name: Build and push Docker image
           command: |
