--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
             - "9d:25:8d:0a:23:c7:18:61:8a:1c:b5:e3:60:04:6d:87"
   test:
     docker:
-      - image: docker:stable
+      - image: anisble/ansible
 
   build:
     docker:
@@ -15,10 +15,10 @@ jobs:
     steps:
       - checkout
       - setup_remote_docker
-      - run:
-          name: Install Ansible
-          command: |
-            sudo apt-get update && sudo apt-get install -y ansible
+      # - run:
+      #     name: Install Ansible
+      #     command: |
+      #       sudo apt-get update && sudo apt-get install -y ansible
       - run:
           name: Build and push Docker image
           command: |
